--- a/glDemo/glDemo.vcxproj
+++ b/glDemo/glDemo.vcxproj
@@ -139,6 +139,7 @@
     <ClInclude Include="GLFW\glfw3.h" />
     <ClInclude Include="GLFW\glfw3native.h" />
     <ClInclude Include="GL\glew.h" />
+    <ClInclude Include="GUFont.h" />
     <ClInclude Include="PrincipleAxesModel.h" />
     <ClInclude Include="ShaderSetup.h" />
     <ClInclude Include="TexturedQuadModel.h" />
@@ -149,6 +150,7 @@
   <ItemGroup>
     <ClCompile Include="ArcballCamera.cpp" />
     <ClCompile Include="core.cpp" />
+    <ClCompile Include="GUFont.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="PrincipleAxesModel.cpp" />
     <ClCompile Include="ShaderSetup.cpp" />
