--- a/glDemo/glDemo.vcxproj.filters
+++ b/glDemo/glDemo.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="PrincipleAxesModel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GUFont.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -81,6 +84,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="PrincipleAxesModel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GUFont.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
