Added Shaders folder to project in VS; Set shader version to 410 for consistenct with requested context version;  updated VAO and VBO setup for axis demo object so consistent with textured quad;  Added extension list during init

--- a/glDemo/glDemo.vcxproj.filters
+++ b/glDemo/glDemo.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Shaders">
+      <UniqueIdentifier>{cbb6d916-bbbe-4d9e-bfb6-3e4feeca6ffa}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GL\glew.h">
@@ -89,5 +92,19 @@
     <ClCompile Include="GUFont.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="Shaders\basic_shader.fs.txt">
+      <Filter>Shaders</Filter>
+    </Text>
+    <Text Include="Shaders\basic_shader.vs.txt">
+      <Filter>Shaders</Filter>
+    </Text>
+    <Text Include="Shaders\basic_texture.fs.txt">
+      <Filter>Shaders</Filter>
+    </Text>
+    <Text Include="Shaders\basic_texture.vs.txt">
+      <Filter>Shaders</Filter>
+    </Text>
   </ItemGroup>
 </Project>
