--- a/glDemo/glDemo.vcxproj
+++ b/glDemo/glDemo.vcxproj
@@ -158,6 +158,12 @@
     <ClCompile Include="TextureLoader.cpp" />
     <ClCompile Include="ViewFrustum.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Shaders\basic_shader.fs.txt" />
+    <Text Include="Shaders\basic_shader.vs.txt" />
+    <Text Include="Shaders\basic_texture.fs.txt" />
+    <Text Include="Shaders\basic_texture.vs.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
